--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <style>
 #grid { 
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
-  grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   grid-gap: 2vw;
   }
 #grid > div {
